Archive2/a4/cc4246e63b59dd/output
main.cpp:1:1: error: expected unqualified-id
{
^
1 error generated.
